# rust-platformer

./: Cargo.toml  index.html
assets/: map.json
src/: enemy.rs  main.rs  platform.rs  player.rs  world.rs
