[package]
name = "macroquad-test"
version = "0.1.0"
authors = ["Taylor Fraley <tfraley@clearent.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
macroquad = "0.3"
macroquad-tiled = "0.1.0"
macroquad-platformer = "0.1.1"
macroquad-particles = "0.1.1"
ncollide2d = "0.29.0"
nalgebra = "0.26.2"
